@@ -1,4 +1,6 @@
 1.10.3
+* Tools/balio: Some improvements around blockchair.com and blockcypher.com API
+* Tools/balio: Fixed balance fetching for Litecoin
 
 1.10.2 - 2022-09-06:
 * Client: New config value "Memory.CompressBlockDB" (default true)
